--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     background-color: #fafafafa;
     max-width: 100%;
     margin: auto;
+    height: auto;
     box-shadow: 0.1rem 0.1rem 0.1rem #c4c4c4, -0.1rem 0rem 0.1rem #c4c4c4;
 }
 
@@ -35,21 +36,20 @@ body {
 
 
 /* banner section starts here  */
-#blog-banner-section {
+#container {
     padding: 5rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 95vh;
 }
 
-#blog-banner-section article {
-    flex-basis: 80%;
+#container article {
+    flex-basis: 70%;
     margin: 1rem;
 }
 
-#blog-banner-section aside {
-    flex-basis: 20%;
+#container aside {
+    flex-basis: 30%;
     text-align: center;
 }
 
@@ -80,7 +80,7 @@ body {
 }
 
 .accordion-content {
-    background: lightgoldenrodyellow;
+    background: #fff;
     display: none;
     padding: 10px;
 }
@@ -90,10 +90,11 @@ body {
 }
 
 .order {
-    width: 45rem;
-    height: 45rem;
-    border: 0.3rem solid;
+    height: auto;
+    border: 0.2rem solid;
+    /* margin-bottom: 70rem; */
     margin-left: 20px;
+    margin-top: 15px;
 }
 
 .order-heading {
@@ -102,10 +103,37 @@ body {
     font-weight: 600;
     padding: 15px;
     color: #fff;
+    display: flex;
     justify-content: flex-start;
 
-
 }
+
+.collection-panel {
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.checkout-step-1 h2 {
+    color: red;
+    font-size: 20px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.collection-body {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: 15px;
+    font-size: 15px;
+    height: 30rem;
+    border: 1px solid;
+    color: #fff;
+    background-color: black;
+}
+
+
 
 /* banner section ends here  */
 
@@ -118,7 +146,6 @@ body {
 .btn {
     background-color: #DDDDDD;
     color: green;
-    border: 1px solid red;
     cursor: pointer;
     font-size: 1.6rem;
     font-weight: 500;
@@ -141,6 +168,32 @@ body {
 .order-body>p {
     font-size: 15px;
     text-align: center;
+    padding: 15px 0;
+}
+
+
+.headingforinoutdiv {
+    color: black;
+    font-size: 20px;
+    font-weight: 500;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.input-style {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.input-hero {
+    border: 1px solid green;
+}
+
+.input-hero:focus {
+    border: 2px solid rgb(128, 153, 90);
+
 }
 
 
@@ -148,17 +201,23 @@ body {
 /* responsive starts here */
 @media (max-width: 992px) {
 
-    #blog-banner-section {
+    #container {
         flex-direction: column;
     }
 
-    #blog-banner-section article {
+    #container article {
         width: 80%;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 5rem;
     }
+
+    #container aside {
+        width: 70%;
+
+    }
+
 
     .accordion {
         width: 80%;
@@ -168,11 +227,12 @@ body {
     }
 
     .order {
-        width: 60rem;
         flex-direction: column;
         flex-wrap: wrap;
         margin-right: 15px;
     }
+
+
 }
 
 @media (max-width: 768px) {
@@ -180,46 +240,32 @@ body {
         font-size: 55.5%;
     }
 
-    #blog-banner-section article {
+    #container {
+        width: 100%;
+    }
+
+    #container article {
         width: 80%;
 
     }
 
-    #blog-banner-section aside {
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 5rem;
+    #container aside {
+        width: 56%;
+        margin-right: 4.8rem;
 
-    }
-
-    .accordion {
-        width: 90%;
-        flex-direction: column;
-        flex-wrap: wrap;
-
-    }
-
-    .order {
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        margin-right: 15px;
     }
 
 
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
 
-    #blog-banner-section article {
+    #container article {
         width: 80%;
 
     }
 
-    #blog-banner-section aside {
+    #container aside {
         width: 80%;
         display: flex;
         flex-direction: column;
@@ -241,6 +287,6 @@ body {
         flex-direction: column;
         flex-wrap: wrap;
     }
-}
+} */
 
 /* responsive ends here */
